<resources>
    <string name="app_name">TDM</string>
    <string name="welcome">Welcome!</string>
    <string name="nice_to_see_you_again">Nice to see you again!</string>
    <string name="you_are_not_a_member">You are not a member?</string>
    <string name="sign_up">Sign up.</string>
    <string name="sign_in">Sign in</string>
    <string name="medicine_supplier_home_page">Medicine Supplier Home Page</string>
    <string name="oxygen_supplier_home_page">Oxygen Supplier Home Page</string>
    <string name="hospital_home_page">Hospital Home Page</string>
    <string name="Account">Account</string>
    <string name="Help">Help</string>
    <string name="About">About Us</string>
    <string name="Signout">Sign out</string>
    <string name="truestats">Truestats</string>
    <string name="data">Data</string>
    <string name="medicine_supplier">Medicine Supplier</string>
    <string name="name">Name</string>
    <string name="hospital_beds">Hospital Beds</string>
    <string name="manager">Manager</string>
    <string name="todo">TODO</string>
    <string name="current_hospital_beds_statistics">Current Hospital Beds Statistics</string>
    <string name="name_of_organisation">Name of Organisation</string>
    <string name="_0">0</string>
    <string name="edit_total">Edit Total</string>
    <string name="normal_beds">Normal Beds</string>
    <string name="time">Time</string>
    <string name="vacant_beds">Vacant Beds:</string>
    <string name="date">Date</string>
    <string name="last_updated">Last Updated:</string>
    <string name="edit_vacant">Edit Vacant</string>
    <string name="oxygen_beds">Oxygen Beds</string>
    <string name="icu_ventilator_beds">ICU/Ventilator Beds</string>
    <string name="address_of_organisation">Address of Organisation</string>
    <string-array name="states">
        <item>Your State</item>
        <item>Andaman and Nicobar</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujurat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Ladakh</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharastra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Puducherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="YourCity">
        <item>Your City</item>
    </string-array>
    <string-array name="AndamanandNicobar">
        <item>Your City</item>
        <item>Port Blair</item>
    </string-array>
    <string-array name="AndhraPradesh">
        <item>Your City</item>
        <item>Adoni</item>
        <item>Anantapur</item>
        <item>Bhimavaram</item>
        <item>Chitoor</item>
        <item>Cuddapah</item>
        <item>Eluru</item>
        <item>Gudivada</item>
        <item>Guntakal</item>
        <item>Guntur</item>
        <item>Hindupur</item>
        <item>Hyderabad</item>
        <item>Kadapa</item>
        <item>Kakinada</item>
        <item>Kukatpalle</item>
        <item>Kurnool</item>
        <item>Lalbahadur Nagar</item>
        <item>Machilipatnam (Masulipatam)</item>
        <item>Malkajgiri</item>
        <item>Nandyal</item>
        <item>Nellore</item>
        <item>Ongole</item>
        <item>Proddatur</item>
        <item>Qutubullapur</item>
        <item>Rajahmundry</item>
        <item>Tenali</item>
        <item>Vijayawada</item>
        <item>Vishakhapatnam</item>
        <item>Vizianagaram</item>
    </string-array>
    <string-array name="ArunachalPradesh">
        <item>Your City</item>
        <item>Anjaw</item>
        <item>Changlang</item>
        <item>Dibang Valley</item>
        <item>East Kameng</item>
        <item>East Siang</item>
        <item>Kurung Kumey</item>
        <item>Lohit</item>
        <item>Lower Dibang Valley</item>
        <item>Lower Subansiri</item>
        <item>Papumpare</item>
        <item>Tawang</item>
        <item>Tirap</item>
        <item>Upper Siang</item>
        <item>Upper Subansiri</item>
        <item>West Kameng</item>
        <item>West Siang</item>
    </string-array>
    <string-array name="Assam">
        <item>Your City</item>
        <item>Baksa</item>
        <item>Barpeta</item>
        <item>Bihpuria</item>
        <item>Bongaigaon</item>
        <item>Cachar</item>
        <item>Chirang</item>
        <item>Darrang</item>
        <item>Dhemaji</item>
        <item>Dhubri</item>
        <item>Dibrugarh</item>
        <item>Dima Hasao</item>
        <item>Goalpara</item>
        <item>Golaghat</item>
        <item>Guwahati (Gauhati)</item>
        <item>Hailakandi</item>
        <item>Jorhat</item>
        <item>Kamrup</item>
        <item>Karbi Anglong</item>
        <item>Karimganj</item>
        <item>Kokrajhar</item>
        <item>Lakhimpur</item>
        <item>Morigaon</item>
        <item>Nagaon</item>
        <item>Nalbari</item>
        <item>North Lakhimpur</item>
        <item>Silchar</item>
        <item>Sivasagar</item>
        <item>Sonitpur</item>
        <item>Tinsukia</item>
        <item>Udalguri</item>
    </string-array>
    <string-array name="Bihar">
        <item>Your City</item>
        <item>Ara</item>
        <item>Araria</item>
        <item>Arrah</item>
        <item>Arwal</item>
        <item>Aurangabad</item>
        <item>Banka</item>
        <item>Begusarai</item>
        <item>Bettiah</item>
        <item>Bhagalpur</item>
        <item>Bhojpur</item>
        <item>Bihar Sharif</item>
        <item>Buxar</item>
        <item>Champaran</item>
        <item>Chapra</item>
        <item>Darbhanga</item>
        <item>Dehri</item>
        <item>East Champaran</item>
        <item>Gaya</item>
        <item>Gopalganj</item>
        <item>Jamui</item>
        <item>Jehanabad</item>
        <item>Kaimur</item>
        <item>Katihar</item>
        <item>Khagaria</item>
        <item>Kishanganj</item>
        <item>Lakhisarai</item>
        <item>Madhepura</item>
        <item>Madhubani</item>
        <item>Monghyr</item>
        <item>Motihari</item>
        <item>Munger</item>
        <item>Muzaffarpur</item>
        <item>Nalanda</item>
        <item>Nawada</item>
        <item>Patna</item>
        <item>Purnea</item>
        <item>Rohtas</item>
        <item>Saharsa</item>
        <item>Samastipur</item>
        <item>Saran</item>
        <item>Sasaram</item>
        <item>Sheikhpura</item>
        <item>Sheohar</item>
        <item>Sitamarhi</item>
        <item>Siwan</item>
        <item>Supaul</item>
        <item>Udakishanganj</item>
        <item>Vaishali</item>
        <item>West Champaran</item>
    </string-array>
    <string-array name="Chandigarh">
        <item>Your City</item>
        <item>Chandigarh</item>
    </string-array>
    <string-array name="Chattisgarh">
        <item>Your City</item>
        <item>Balod</item>
        <item>Bastar</item>
        <item>Bhilai</item>
        <item>Bijapur</item>
        <item>Bilaspur</item>
        <item>Dantewada</item>
        <item>Dhamtari</item>
        <item>Durg</item>
        <item>Janjgir Champa</item>
        <item>Jashpur</item>
        <item>Kanker</item>
        <item>Kawardha</item>
        <item>Korba</item>
        <item>Koriya</item>
        <item>Mahasamund</item>
        <item>Narayanpur</item>
        <item>Raigarh</item>
        <item>Raipur</item>
        <item>Raj Nandgaon</item>
        <item>Surguja</item>
        <item>Uttar Bastar Kanker</item>
    </string-array>
    <string-array name="DadraandNagarHaveli">
        <item>Your City</item>
        <item>Silvassa</item>
    </string-array>
    <string-array name="Damananddiu">
        <item>Your City</item>
        <item>Daman</item>
    </string-array>
    <string-array name="Delhi">
        <item>Your City</item>
        <item>Central</item>
        <item>East</item>
        <item>New Delhi</item>
        <item>North</item>
        <item>North East</item>
        <item>North West</item>
        <item>South</item>
        <item>South West</item>
        <item>West</item>
    </string-array>
    <string-array name="Goa">
        <item>Your City</item>
        <item>North Goa</item>
        <item>Panaji</item>
        <item>South Goa</item>
    </string-array>
    <string-array name="Gujurat">
        <item>Your City</item>
        <item>Ahmedabad</item>
        <item>Amreli</item>
        <item>Anand</item>
        <item>Banaskantha</item>
        <item>Bharuch (Broach)</item>
        <item>Bhavnagar</item>
        <item>Bhuj</item>
        <item>Chandkheda</item>
        <item>Dahod</item>
        <item>Gandhidham</item>
        <item>Gandhinagar</item>
        <item>Godhra</item>
        <item>Himatnagar</item>
        <item>Jamnagar</item>
        <item>Junagadh</item>
        <item>Kheda</item>
        <item>Kutch</item>
        <item>Mehsana</item>
        <item>Modasa</item>
        <item>Morvi</item>
        <item>Nadiad</item>
        <item>Narmada</item>
        <item>Navsari</item>
        <item>Palanpur</item>
        <item>Panchmahal</item>
        <item>Patan</item>
        <item>Porbandar</item>
        <item>Radhanpur</item>
        <item>Rajkot</item>
        <item>Sabarkantha</item>
        <item>Surat</item>
        <item>Surendranagar</item>
        <item>Vadodara (Baroda)</item>
        <item>Valsad</item>
        <item>Vapi</item>
        <item>Vejalpur</item>
        <item>Veraval</item>
    </string-array>
    <string-array name="Haryana">
        <item>Your City</item>
        <item>Ambala</item>
        <item>Bahadurgarh</item>
        <item>Bhiwani</item>
        <item>Faridabad</item>
        <item>Fatehabad</item>
        <item>Gurgaon</item>
        <item>Hisar (Hissar)</item>
        <item>Jhajjar</item>
        <item>Jind</item>
        <item>Kaithal</item>
        <item>Karnal</item>
        <item>Kurukshetra</item>
        <item>Mahendragarh</item>
        <item>Mewat</item>
        <item>Panchkula</item>
        <item>Panipat</item>
        <item>Rewari</item>
        <item>Rohtak</item>
        <item>Sirsa</item>
        <item>Sonipat (Sonepat)</item>
        <item>Yamuna Nagar</item>
    </string-array>
    <string-array name="HimachalPradesh">
        <item>Your City</item>
        <item>Bilaspur</item>
        <item>Chamba</item>
        <item>Hamirpur</item>
        <item>Kangra</item>
        <item>Kinnaur</item>
        <item>Kullu</item>
        <item>Lahaul and Spiti</item>
        <item>Mandi</item>
        <item>Shimla</item>
        <item>Sirmaur</item>
        <item>Solan</item>
        <item>Una</item>
    </string-array>
</resources>